tests/NormalTests/paczka2/big_fuzzy/33287878.err
Error in line 2: MPq1hAB7V A456 10,7
Error in line 6: MPq1hAB7V S219 49,9
Error in line 26: wULH S625 73,5
Error in line 17: S41 S625 16,3
Error in line 48: v5xlFRv S41 12,5
Error in line 55: MPq1hAB7V S41 72,4
Error in line 53: S41 S219 63,5
Error in line 56: MPq1hAB7V S625 80,3
Error in line 67: aWE A456 31,7
Error in line 88: wULH A4V6 22,1
Error in line 74: aWE S625 19,4
Error in line 92: aWE S41 25B,0
Error in line 87: wULH S41 45,6
Error in line 84: S5mL8kqft S41 68,3
Error in line 91: v5xlFRv A456 43,8
Error in line 99: v5xlFRv S41 85,9
Error in line 101: MPq1hAB7V S41 163,9
Error in line 93: wULH A456 12,4
Error in line 107: MPq1hAB7V S219 50,5
Error in line 104: v5xlFRv S625 30,3
Error in line 119: aWE S625 16,7
Error in line 134: v5xlFRv S41 6,70
Error in line 135: S5mL8kqft A456 84,5
Error in line 137: S5mL8kqft S625 40,2
Error in line 140: S5mL8kqft S219 29,7
Error in line 149: S5mL8kqft A456 0,8
Error in line 136: v5xlFRv S41 1,5
Error in line 152: v5xlFRv A456 96,5
Error in line 162: S41 S219 3,
Error in line 150: S5mL8kqft S625 54,6
Error in line 171: S41 S219 59,6
Error in line 173: S41 S625 61,2
Error in line 170: v5xlFRv A456 11,5
Error in line 178: v5xlFRv S625 8,7
Error in line 192: wULH S219 X,0
Error in line 193: MPq1hAB7V S219 10,1
Error in line 194: wULH S219 165,3
Error in line 213: wULH S625 91,61
Error in line 215: S5mL8kqft A456 47,8
Error in line 217: v5xlFRv S41 36,8
Error in line 214: MPq1hAB7V S219 46,6
Error in line 199: wULH S625 40,5
